--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "compression": "^1.7.1",
     "express-session": "^1.17.0",
     "node-fetch": "^2.6.0",
